removed duplicate values from spouse data

--- a/Data Cleaner.ipynb
+++ b/Data Cleaner.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "8d4c92be",
    "metadata": {},
    "outputs": [],
@@ -3929,35 +3929,35 @@
        "      <td>Abraham Lincoln</td>\n",
        "      <td>child</td>\n",
        "      <td>Robert Todd Lincoln</td>\n",
-       "      <td>Abraham Lincoln child Robert Todd Lincoln</td>\n",
+       "      <td>Robert Todd Lincoln child Abraham Lincoln</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Abraham Lincoln</td>\n",
        "      <td>child</td>\n",
        "      <td>Edward Baker Lincoln</td>\n",
-       "      <td>Abraham Lincoln child Edward Baker Lincoln</td>\n",
+       "      <td>Edward Baker Lincoln child Abraham Lincoln</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Abraham Lincoln</td>\n",
        "      <td>child</td>\n",
        "      <td>William Wallace Lincoln</td>\n",
-       "      <td>Abraham Lincoln child William Wallace Lincoln</td>\n",
+       "      <td>William Wallace Lincoln child Abraham Lincoln</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Abraham Lincoln</td>\n",
        "      <td>child</td>\n",
        "      <td>Tad Lincoln</td>\n",
-       "      <td>Abraham Lincoln child Tad Lincoln</td>\n",
+       "      <td>Tad Lincoln child Abraham Lincoln</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Alfred Hitchcock</td>\n",
        "      <td>child</td>\n",
        "      <td>Patricia Hitchcock</td>\n",
-       "      <td>Alfred Hitchcock child Patricia Hitchcock</td>\n",
+       "      <td>Patricia Hitchcock child Alfred Hitchcock</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3972,11 +3972,11 @@
        "4  Alfred Hitchcock    child       Patricia Hitchcock   \n",
        "\n",
        "                                relation triplet  \n",
-       "0      Abraham Lincoln child Robert Todd Lincoln  \n",
-       "1     Abraham Lincoln child Edward Baker Lincoln  \n",
-       "2  Abraham Lincoln child William Wallace Lincoln  \n",
-       "3              Abraham Lincoln child Tad Lincoln  \n",
-       "4      Alfred Hitchcock child Patricia Hitchcock  "
+       "0      Robert Todd Lincoln child Abraham Lincoln  \n",
+       "1     Edward Baker Lincoln child Abraham Lincoln  \n",
+       "2  William Wallace Lincoln child Abraham Lincoln  \n",
+       "3              Tad Lincoln child Abraham Lincoln  \n",
+       "4      Patricia Hitchcock child Alfred Hitchcock  "
       ]
      },
      "execution_count": 34,
@@ -3985,7 +3985,7 @@
     }
    ],
    "source": [
-    "child_data = merge_column(child_split_1, child_data, child_split_2)\n",
+    "child_data = merge_column(child_split_2, child_data, child_split_1, col1='person2', col2='relation', col3='person1')\n",
     "child_data.head()"
    ]
   },
@@ -4039,35 +4039,35 @@
        "      <td>Andrei Tarkovsky</td>\n",
        "      <td>parent</td>\n",
        "      <td>Arseny Tarkovsky</td>\n",
-       "      <td>Andrei Tarkovsky parent Arseny Tarkovsky</td>\n",
+       "      <td>Arseny Tarkovsky parent Andrei Tarkovsky</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Alexander the Great</td>\n",
        "      <td>parent</td>\n",
        "      <td>Philip II of Macedon</td>\n",
-       "      <td>Alexander the Great parent Philip II of Macedon</td>\n",
+       "      <td>Philip II of Macedon parent Alexander the Great</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Alexander the Great</td>\n",
        "      <td>parent</td>\n",
        "      <td>Olympias</td>\n",
-       "      <td>Alexander the Great parent Olympias</td>\n",
+       "      <td>Olympias parent Alexander the Great</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Attila</td>\n",
        "      <td>parent</td>\n",
        "      <td>Mundzuk</td>\n",
-       "      <td>Attila parent Mundzuk</td>\n",
+       "      <td>Mundzuk parent Attila</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Alp Arslan</td>\n",
        "      <td>parent</td>\n",
        "      <td>Chaghri Beg</td>\n",
-       "      <td>Alp Arslan parent Chaghri Beg</td>\n",
+       "      <td>Chaghri Beg parent Alp Arslan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4082,11 +4082,11 @@
        "4           Alp Arslan   parent           Chaghri Beg   \n",
        "\n",
        "                                  relation triplet  \n",
-       "0         Andrei Tarkovsky parent Arseny Tarkovsky  \n",
-       "1  Alexander the Great parent Philip II of Macedon  \n",
-       "2              Alexander the Great parent Olympias  \n",
-       "3                            Attila parent Mundzuk  \n",
-       "4                    Alp Arslan parent Chaghri Beg  "
+       "0         Arseny Tarkovsky parent Andrei Tarkovsky  \n",
+       "1  Philip II of Macedon parent Alexander the Great  \n",
+       "2              Olympias parent Alexander the Great  \n",
+       "3                            Mundzuk parent Attila  \n",
+       "4                    Chaghri Beg parent Alp Arslan  "
       ]
      },
      "execution_count": 36,
@@ -4095,7 +4095,7 @@
     }
    ],
    "source": [
-    "parent_data = merge_column(parent_split_1, parent_data, parent_split_2)\n",
+    "parent_data = merge_column(parent_split_2, parent_data, parent_split_1, col1='person2', col2='relation', col3='person1')\n",
     "parent_data.head()"
    ]
   },
@@ -4290,8 +4290,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "116619d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spouse_data.drop_duplicates(subset=['person1'], keep='first', inplace=True, ignore_index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "eff8b76b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The data has 30223 rows and 4 colums.\n",
+      "There are 30223 unique values in Person1 column and 28255 unique values in Person2 column.\n",
+      "Number of empty rows in the respective columns are person1: 0, relation: 0, person2: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "check(spouse_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "25a1a6c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spouse_data.drop_duplicates(subset=['person2'], keep='first', inplace=True, ignore_index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "78680c62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The data has 28255 rows and 4 colums.\n",
+      "There are 28255 unique values in Person1 column and 28255 unique values in Person2 column.\n",
+      "Number of empty rows in the respective columns are person1: 0, relation: 0, person2: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "check(spouse_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "019b9fde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person1</th>\n",
+       "      <th>relation</th>\n",
+       "      <th>person2</th>\n",
+       "      <th>relation triplet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Abraham Lincoln</td>\n",
+       "      <td>spouse</td>\n",
+       "      <td>Mary Todd Lincoln</td>\n",
+       "      <td>Abraham Lincoln spouse Mary Todd Lincoln</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Allan Dwan</td>\n",
+       "      <td>spouse</td>\n",
+       "      <td>Pauline Bush (actress)</td>\n",
+       "      <td>Allan Dwan spouse Pauline Bush (actress)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Andrei Tarkovsky</td>\n",
+       "      <td>spouse</td>\n",
+       "      <td>Irma Raush</td>\n",
+       "      <td>Andrei Tarkovsky spouse Irma Raush</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Albert Einstein</td>\n",
+       "      <td>spouse</td>\n",
+       "      <td>Mileva Marić</td>\n",
+       "      <td>Albert Einstein spouse Mileva Marić</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alexander the Great</td>\n",
+       "      <td>spouse</td>\n",
+       "      <td>Roxana</td>\n",
+       "      <td>Alexander the Great spouse Roxana</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               person1 relation                 person2  \\\n",
+       "0      Abraham Lincoln   spouse       Mary Todd Lincoln   \n",
+       "1           Allan Dwan   spouse  Pauline Bush (actress)   \n",
+       "2     Andrei Tarkovsky   spouse              Irma Raush   \n",
+       "3      Albert Einstein   spouse            Mileva Marić   \n",
+       "4  Alexander the Great   spouse                  Roxana   \n",
+       "\n",
+       "                           relation triplet  \n",
+       "0  Abraham Lincoln spouse Mary Todd Lincoln  \n",
+       "1  Allan Dwan spouse Pauline Bush (actress)  \n",
+       "2        Andrei Tarkovsky spouse Irma Raush  \n",
+       "3       Albert Einstein spouse Mileva Marić  \n",
+       "4         Alexander the Great spouse Roxana  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spouse_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "8546f735",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person1</th>\n",
+       "      <th>relation</th>\n",
+       "      <th>person2</th>\n",
+       "      <th>relation triplet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>28250</th>\n",
+       "      <td>John Graham (Australian politician)</td>\n",
+       "      <td>spouse</td>\n",
+       "      <td>Jenny McAllister</td>\n",
+       "      <td>John Graham (Australian politician) spouse Jen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28251</th>\n",
+       "      <td>Lisa Joy</td>\n",
+       "      <td>spouse</td>\n",
+       "      <td>Jonathan Nolan</td>\n",
+       "      <td>Lisa Joy spouse Jonathan Nolan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28252</th>\n",
+       "      <td>Shahriar Sayeed Husain</td>\n",
+       "      <td>spouse</td>\n",
+       "      <td>Farah Mahbub (judge)</td>\n",
+       "      <td>Shahriar Sayeed Husain spouse Farah Mahbub (ju...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28253</th>\n",
+       "      <td>Hazrat Khanoum Nosrat Saltaneh</td>\n",
+       "      <td>spouse</td>\n",
+       "      <td>Ed-Dowleh</td>\n",
+       "      <td>Hazrat Khanoum Nosrat Saltaneh spouse Ed-Dowleh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28254</th>\n",
+       "      <td>Chantal Hochuli</td>\n",
+       "      <td>spouse</td>\n",
+       "      <td>Prince Ernst August of Hanover (born 1954)</td>\n",
+       "      <td>Chantal Hochuli spouse Prince Ernst August of ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   person1 relation  \\\n",
+       "28250  John Graham (Australian politician)   spouse   \n",
+       "28251                             Lisa Joy   spouse   \n",
+       "28252               Shahriar Sayeed Husain   spouse   \n",
+       "28253       Hazrat Khanoum Nosrat Saltaneh   spouse   \n",
+       "28254                      Chantal Hochuli   spouse   \n",
+       "\n",
+       "                                          person2  \\\n",
+       "28250                            Jenny McAllister   \n",
+       "28251                              Jonathan Nolan   \n",
+       "28252                        Farah Mahbub (judge)   \n",
+       "28253                                   Ed-Dowleh   \n",
+       "28254  Prince Ernst August of Hanover (born 1954)   \n",
+       "\n",
+       "                                        relation triplet  \n",
+       "28250  John Graham (Australian politician) spouse Jen...  \n",
+       "28251                     Lisa Joy spouse Jonathan Nolan  \n",
+       "28252  Shahriar Sayeed Husain spouse Farah Mahbub (ju...  \n",
+       "28253    Hazrat Khanoum Nosrat Saltaneh spouse Ed-Dowleh  \n",
+       "28254  Chantal Hochuli spouse Prince Ernst August of ...  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spouse_data.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1974ec73",
    "metadata": {},
    "outputs": [],
    "source": []
