added drop_rows function

--- a/Data Cleaner.ipynb
+++ b/Data Cleaner.ipynb
@@ -1515,7 +1515,7 @@
    "source": [
     "The relation column does not need any kind of cleaning or modification. However, the person1 and person2 columns of all three dataframes need extensive cleaning. There is a lot of trivial information in these columns. A lot of the rows have years mentioned, while others have titles like \"Queen of England\", \"Earl of Lovalace\", \"Duchess of Prussia\" to name a few. \n",
     "\n",
-    "### So far, I have two methods to clean these columns with maximum retention of information. \n",
+    "###  I have two methods to clean these columns with maximum retention of information. \n",
     "\n",
     "1. The first method will split a column into multiple columns based on the presence whitespaces.    \n",
     "\n",
@@ -3517,118 +3517,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "913de252",
+   "cell_type": "markdown",
+   "id": "8c946f6a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Allan Dwan spouse Pauline Bush '"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "text = \"Allan Dwan spouse Pauline Bush (Actress)\"\n",
-    "text = re.sub(r\"\\([^()]*\\)\", r\"\", text)\n",
-    "text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "b2e98a1d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Alan TuringX   V X'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text = \"Alan TuringX XVII I IV IX\"\n",
-    "text = re.sub(r\"(I|II|III|IV|XV)*\", r\"\", text)\n",
-    "text.strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "cdcb3fe3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'major league Basketball Season'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text = \"1983 major league Basketball Season\"\n",
-    "text = re.sub(r\"[0-9]+\", r\"\", text)\n",
-    "text.strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "2f04576f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Beatrice of Castile '"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text = 'Beatrice of Castile (1242–1303)'\n",
-    "text = re.sub(r\"\\([^()]*\\)\", r\"\", text)\n",
-    "text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "a3b5a628",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Alan TuringX'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text = \"Alan TuringX XVII I IV IX M\"\n",
-    "text = re.sub(r\"\\b(?=[MDCLXVIΙ])M{0,4}(CM|CD|D?C{0,3})(XC|XL|L?X{0,3})([IΙ]X|[IΙ]V|V?[IΙ]{0,3})\\b\\.?\", r\"\", text)\n",
-    "text.strip()"
+    "## Using regular expressions to clean the data.\n",
+    "\n",
+    "I ran some experiments on the data to clean it using regex module of python. In short these regular expressions have helped us to remove **initials, non alphanumeric characters, anything within parenthesis, roman numerals, and multiple spaces** from our data. At last we are converting our data into lower case alphabets.\n",
+    "\n",
+    "Detailed experiments can be found below in this notebook."
    ]
   },
   {
@@ -3661,48 +3558,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f0ee7db3",
+   "metadata": {},
+   "source": [
+    "### Removing any information present within parenthesis.\n",
+    "\n",
+    "If we use the below regular expression we can convert **\"Allan Dwan spouse Pauline Bush(Actress)\"** to **'allan dwan spouse pauline bush'**."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 116,
+   "id": "913de252",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'allan dwan spouse pauline bush'"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"Allan Dwan spouse Pauline Bush(Actress)\"\n",
+    "text = re.sub(r\"\\([^()]*\\)\", r\"\", text)\n",
+    "text.strip()\n",
+    "text.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "2f04576f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'beatrice of castile'"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = 'Beatrice of Castile(1242–1303)'\n",
+    "text = re.sub(r\"\\([^()]*\\)\", r\"\", text)\n",
+    "text.strip()\n",
+    "text.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc2e8356",
+   "metadata": {},
+   "source": [
+    "### Removing roman numerls from our data.\n",
+    "\n",
+    "Roman numerical system: **I = 1, V = 5, X = 10, L = 50, C = 100, D = 500, M = 1,000**. Using a combination of these alphabets we can represent any number in the roman numerical system. For e.g. 4 is represented by IV. The used regular expression is robust as it will just remove the roman numerls and not the corresponding English alphabets like I, V, X, L, C, D, and M.\n",
+    "\n",
+    "If we use the below regular expression we can convert **\"Alan TuringX XVII I IV IX M\"** to **'Alan TuringX'**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "a3b5a628",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Alan TuringX'"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"Alan TuringX XVII I IV IX M\"\n",
+    "text = re.sub(r\"\\b(?=[MDCLXVIΙ])M{0,4}(CM|CD|D?C{0,3})(XC|XL|L?X{0,3})([IΙ]X|[IΙ]V|V?[IΙ]{0,3})\\b\\.?\", r\"\", text)\n",
+    "text.strip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f91209f",
+   "metadata": {},
+   "source": [
+    "### Removing initials from a name.\n",
+    "\n",
+    "If we use the below regular expression we can remove any initial from a name as long as the initial is followed by a dot. We can convert **'A. D. van Vogt'** to **'van vogt'**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "id": "b50920b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'van Vogt'"
+       "'van vogt'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = 'A. D. van Vogt'\n",
+    "text = 'A. D. van vogt'\n",
     "text = re.sub(r'[A-Z]\\.', r'', text)\n",
     "text.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 136,
    "id": "7c96a384",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'duke of prussia spouse anna marie of brunswick lüneburg'"
+       "'duke of prussia spouse anna marie of brunswick - lüneburg'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = 'duke of prussia spouse anna marie of brunswick - lüneburg'\n",
-    "text = re.sub(r\"([-;;.,!?<=>])\", r\"\", text)\n",
+    "text = 'duke of prussia spouse anna marie of //brunswick\" - /lüneburg'\n",
+    "text = re.sub(r'([/-;;.,\"!?<=>])', r\"\", text)\n",
     "text = re.sub(\" +\", \" \", text)\n",
     "text.strip()"
    ]
@@ -4553,12 +4553,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 143,
    "id": "1974ec73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Charles Buddy Rogers'"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "text = 'Charles \\\\\"Buddy\\\\\" Rogers'"
+    "text = 'Charles// \\\\\"Buddy\\\\\" &R;o:gers'\n",
+    "text = re.sub(r'([/-;;.,\"!&?<=>\\\\])', r\"\", text)\n",
+    "text.strip()"
    ]
   },
   {
@@ -4585,8 +4598,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "613350cf",
+   "execution_count": 104,
+   "id": "7e180210",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4596,8 +4609,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "90fba623",
+   "execution_count": 105,
+   "id": "413f8489",
    "metadata": {},
    "outputs": [
     {
@@ -4663,7 +4676,7 @@
        "3    Tommy  siblings          #psy"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4675,7 +4688,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "9065c620",
+   "id": "ada695f9",
    "metadata": {},
    "outputs": [
     {
@@ -4697,7 +4710,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "7e772712",
+   "id": "1e05d6f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4712,7 +4725,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "60af2ae5",
+   "id": "86eeae00",
    "metadata": {},
    "outputs": [
     {
@@ -4733,7 +4746,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "950760a5",
+   "id": "21809f2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4756,8 +4769,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 107,
+   "id": "66694e4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drop_rows(data, labels, axis=0, inplace=True):\n",
+    "    \n",
+    "    # dropping specific rows from our dataframe using a list of indexes\n",
+    "    data.drop(labels=labels, axis=axis, inplace=inplace)\n",
+    "    # reset the index of our dataframe\n",
+    "    data.reset_index(inplace=inplace)\n",
+    "    \n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
-   "id": "577fae6c",
+   "id": "921b0ecb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4767,7 +4797,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "9a9439bc",
+   "id": "f85f760f",
    "metadata": {},
    "outputs": [
     {
@@ -4831,7 +4861,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "9b03c0b9",
+   "id": "86053882",
    "metadata": {},
    "outputs": [
     {
@@ -4890,7 +4920,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "1994b151",
+   "id": "b227cb7e",
    "metadata": {},
    "outputs": [
     {
@@ -4911,7 +4941,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "fd84132c",
+   "id": "e900c55f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4923,7 +4953,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "e302ce75",
+   "id": "36b00c73",
    "metadata": {},
    "outputs": [
     {
@@ -5115,7 +5145,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "8ad292a8",
+   "id": "813d4090",
    "metadata": {},
    "outputs": [
     {
@@ -5192,8 +5222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "dbafa8f2",
+   "execution_count": 106,
+   "id": "9cb8da1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5203,7 +5233,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d2c0598c",
+   "id": "f35ddaea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5213,7 +5243,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "466df48f",
+   "id": "42a3404b",
    "metadata": {},
    "outputs": [
     {
@@ -5276,8 +5306,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 108,
+   "id": "e4122062",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = drop_rows(df, idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "f447cc01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>person1</th>\n",
+       "      <th>relation</th>\n",
+       "      <th>person2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Anu</td>\n",
+       "      <td>siblings</td>\n",
+       "      <td>Rashi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Abhinav</td>\n",
+       "      <td>siblings</td>\n",
+       "      <td>Vanshi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index  person1  relation person2\n",
+       "0      1      Anu  siblings   Rashi\n",
+       "1      2  Abhinav  siblings  Vanshi"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7bf561a3",
+   "id": "55d8c197",
    "metadata": {},
    "outputs": [],
    "source": []
