--- a/Data Cleaner.ipynb
+++ b/Data Cleaner.ipynb
@@ -54,10 +54,10 @@
    "source": [
     "def check(dataframe):\n",
     "    \n",
-    "    #checking the number of rows and columns in the dataset\n",
+    "    # checking the number of rows and columns in the dataset\n",
     "    print(f'The data has {dataframe.shape[0]} rows and {dataframe.shape[1]} colums.')\n",
     "    \n",
-    "    #checking number of unique entries in the respective columns\n",
+    "    # checking number of unique entries in the respective columns\n",
     "    unique1 = dataframe['person1'].unique()\n",
     "    unique2 = dataframe['person2'].unique()\n",
     "    print(f'There are {len(unique1)} unique values in Person1 column and {len(unique2)} unique values in Person2 column.')\n",
@@ -74,7 +74,7 @@
    "source": [
     "def merge_column(data_x, data_xy, data_y, col1='person1', col2='relation', col3='person2', diff=True):\n",
     "    \n",
-    "    #create a new col named 'relation triplet' and assign it the value of all columns combined\n",
+    "    # creating a new column named 'relation triplet' and assigning it the value of all columns combined\n",
     "    if diff:\n",
     "        data_xy['relation triplet'] = data_x[col1].astype(str) + ' ' + data_xy[col2].astype(str) + ' ' + data_y[col3].astype(str)\n",
     "    else:\n",
@@ -2249,9 +2249,9 @@
     "    # removing multiple spaces\n",
     "    text = re.sub(\" +\", \" \", text)\n",
     "    \n",
-    "    # convert the text into lower case\n",
+    "    # converting names into lower case\n",
     "    text = text.lower()\n",
-    "    # removing any blank spaces from the beginning or ending of text\n",
+    "    # removing any blank spaces from the beginning or ending of names\n",
     "    text = text.strip()\n",
     "    \n",
     "    return text"
@@ -2388,7 +2388,7 @@
    "id": "770b242f",
    "metadata": {},
    "source": [
-    "### Removing special character from a name\n",
+    "### Removing special character from a name.\n",
     "\n",
     "Special characters include - '**/**', '**-**', '**;**', '**.**', '**\"**', '**!**', '**&**', '**?**', '**<**', '**>**', and '**\\**'. If we use the below regular expression we can remove any of the above mentioned special characters from a name. We can convert **'Charles// \\\\\"Buddy\\\\\" &R;o:gers'** to **'Charles Buddy Rogers'**."
    ]
@@ -2464,10 +2464,10 @@
     "    \n",
     "    # iterating over the values in a specific column\n",
     "    for i, val in enumerate(data[col_name]):\n",
-    "        # checking if the value starts with an english alphabet or not\n",
+    "        # checking if the name starts with an english alphabet or not\n",
     "        if val[0].isalpha():\n",
     "            continue\n",
-    "        # appending the index of the value that does not start with an alphabet\n",
+    "        # appending the index value of the name that does not start with an alphabet\n",
     "        else:\n",
     "            idx.append(i)\n",
     "            \n",
@@ -3169,7 +3169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bd9d4e8",
+   "id": "94768fb5",
    "metadata": {},
    "source": [
     "Our spouse dataset had **34163** rows earlier. Upon removing duplicate name values from person1 column we successfully removed **3940** values. Further, we remove **1968** duplicate names when we use person2 column for our duplicate value check. Hence, a total of **5908** duplicate names were removed from our dataset. Now one person only has one spouse."
@@ -3424,7 +3424,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a4f01428",
+   "id": "497968c9",
    "metadata": {},
    "outputs": [
     {
@@ -6328,7 +6328,7 @@
     {
      "data": {
       "text/plain": [
-       "70159"
+       "70162"
       ]
      },
      "execution_count": 107,
@@ -6337,7 +6337,7 @@
     }
    ],
    "source": [
-    "14136 + 27814 + 28209"
+    "14139 + 27814 + 28209"
    ]
   },
   {
