--- a/Data Cleaner.ipynb
+++ b/Data Cleaner.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
     "import re\n",
     "import string\n",
     "import os\n",
@@ -3384,7 +3385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd95a6b2",
+   "id": "7052cba1",
    "metadata": {},
    "source": [
     "### Custom function to drop certain rows.\n",
@@ -6312,7 +6313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a30d294e",
+   "id": "64713d9e",
    "metadata": {},
    "source": [
     "### Saving our cleaned data in a comma seperated file.\n",
@@ -6327,7 +6328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#output_directory=''\n",
+    "#output_directory='/relation.csv'\n",
     "#relation_triplets.to_csv(output_directory, index=False)"
    ]
   },
@@ -6349,6 +6350,14 @@
    "outputs": [],
    "source": [
     "#new_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "834a2590",
+   "metadata": {},
+   "source": [
+    "The limitations of my work have been discussed in detail in my lab report."
    ]
   }
  ],
